# Mathematics-of-Decision-Making

./: README.md  ch3.ipynb  pyproject.toml
src/: ch02.ipynb  ch03.ipynb  ch06.ipynb
