[tool.poetry]
name = "mathematics-of-decision-making"
version = "0.1.0"
description = ""
authors = ["tsutsumi-ozro <soccerbakadaiki@icloud.com>"]
readme = "README.md"
packages = [{include = "mathematics_of_decision_making"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
japanize-matplotlib = "^1.1.3"
matplotlib = "^3.7.0"
simpy = "^4.0.1"
sympy = "<=1.8"
networkx = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
